# app/Http/Resources/Subject.php
@@ -3,6 +3,7 @@
 namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\Resource;
+use App\Http\Resources\User as UserResource;
 
 class Subject extends Resource
 {
@@ -18,7 +19,7 @@ class Subject extends Resource
           'id' => $this->id,
           'name' => $this->name,
           'archived' => !!$this->archived,
-          'teacherId' => $this->teacher_id,
+          'teacher' => $this->teacher ? new UserResource($this->teacher) : null,
           'status' => $this->status,
           'createdAt' => is_null($this->created_at) ? null : $this->created_at->toDateTimeString(),
           'updatedAt' => is_null($this->updated_at) ? null : $this->updated_at->toDateTimeString(),
