# storage/api-docs/api-docs.json
@@ -2231,6 +2231,14 @@
           }
         },
         {
+          "type": "object",
+          "properties": {
+            "teacher": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        },
+        {
           "$ref": "#/definitions/Timestamps"
         }
       ]
